--- a/Contracts/Mainnet/ReadMe
+++ b/Contracts/Mainnet/ReadMe
@@ -1,1 +1,3 @@
-Contract deployement on main net of the Binance Smart Chain - https://bscscan.com/address/0x743e40a3d94b1b7b296a552522a6abd6c2f4f206#code
+Contract will be deployement on main net of the Binance Smart Chain
+
+Link: https://bscscan.com/address/UPDATE#code
