--- a/Contracts/Mainnet/ReadMe
+++ b/Contracts/Mainnet/ReadMe
@@ -1,3 +1,3 @@
-Contract will be deployement on main net of the Binance Smart Chain
+Contract deployed on main net of the Binance Smart Chain
 
-Link: https://bscscan.com/address/UPDATE#code
+Link - https://bscscan.com/address/0x85128f08adef4b50eabf262b4c9674d5acebe8f2#code
