--- a/Contracts/Testnet/ReadMe
+++ b/Contracts/Testnet/ReadMe
@@ -1,1 +1,3 @@
+Contract deployed on main net of the Binance Smart Chain (Test net)
 
+Link - https://testnet.bscscan.com/address/0x85128F08ADEF4B50EABf262b4c9674d5ACEbe8F2#code
