--- a/Audits/ReadMe
+++ b/Audits/ReadMe
@@ -1,1 +1,1 @@
-ZOLA smart contract will be audited by the Freshcoins - https://www.freshcoins.io/audit
+ZOLA smart contract has been fully audited by the Freshcoins - https://github.com/freshcoins/Smart-Contract-Audits/blob/main/Zola_0x85128F08ADEF4B50EABf262b4c9674d5ACEbe8F2.pdf
