--- a/Zola DAO/ReadMe
+++ b/Zola DAO/ReadMe
@@ -1,1 +1,3 @@
+We are excited to introduce you to our decentralized autonomous organization, a community-driven platform that enables members to propose, discuss, and vote on initiatives that will shape the future of the ZOLA ecosystem. Whether you’re a developer, a user, or simply a fan of the ZOLA ecosystem, we invite you to join us and become a part of this exciting movement.
+
 Link - https://snapshot.org/#/zolaecosystem.eth
