--- a/Social Media & Links/ReadMe
+++ b/Social Media & Links/ReadMe
@@ -1,4 +1,4 @@
-📢 Social Media & Other Links
+📢 Social Media and Other Links
 
 🔗 Website : https://zolacoin.com
 🔗 Twitter : https://twitter.com/ZolaEcosystem
