--- a/Social Media & Links/ReadMe
+++ b/Social Media & Links/ReadMe
@@ -4,3 +4,4 @@
 🔗 Twitter : https://twitter.com/ZolaEcosystem
 🔗 Telegram Channel :  https://t.me/ZolaEcosystem
 🔗 Medium : https://zolaecosystem.medium.com
+🔗 Whitepaper : https://whitepaper.zolacoin.com
