--- a/Social Media & Links/ReadMe
+++ b/Social Media & Links/ReadMe
@@ -5,3 +5,4 @@
 🔗 Telegram Channel :  https://t.me/ZolaEcosystem
 🔗 Medium : https://zolaecosystem.medium.com
 🔗 Whitepaper : https://whitepaper.zolacoin.com
+🔗 Reddit : https://www.reddit.com/r/ZolaCommunity
