--- a/Social Media & Links/ReadMe
+++ b/Social Media & Links/ReadMe
@@ -4,5 +4,8 @@
 🔗 Twitter : https://twitter.com/ZolaEcosystem
 🔗 Telegram Channel :  https://t.me/ZolaEcosystem
 🔗 Medium : https://zolaecosystem.medium.com
-🔗 Whitepaper : https://whitepaper.zolacoin.com
 🔗 Reddit : https://www.reddit.com/r/ZolaCommunity
+🔗 Facebook : https://www.facebook.com/ZolaEcosystem
+🔗 Instagram : https://www.instagram.com/Zola_Ecosystem
+🔗 Whitepaper : https://whitepaper.zolacoin.com
+
