--- a/Zola DAO/ReadMe
+++ b/Zola DAO/ReadMe
@@ -1,3 +1,6 @@
-We are excited to introduce you to our decentralized autonomous organization, a community-driven platform that enables members to propose, discuss, and vote on initiatives that will shape the future of the ZOLA ecosystem. Whether you’re a developer, a user, or simply a fan of the ZOLA ecosystem, we invite you to join us and become a part of this exciting movement.
+We are excited to introduce you to our decentralized autonomous organization, a community-driven platform that enables members 
+to propose, discuss, and vote on initiatives that will shape the future of the ZOLA ecosystem. Whether you’re a developer, a user, 
+or simply a fan of the ZOLA ecosystem, we invite you to join us and become a part of this exciting movement. 
+Read more -https://app.gitbook.com/s/2FVwyup9njLnzUmAl36L/ecosystem/zola-dao
 
 Link - https://snapshot.org/#/zolaecosystem.eth/
