--- a/Social Media & Links/ReadMe
+++ b/Social Media & Links/ReadMe
@@ -2,10 +2,15 @@
 
 🔗 Website : https://zolacoin.com
 🔗 Twitter : https://twitter.com/ZolaEcosystem
-🔗 Telegram Channel :  https://t.me/ZolaEcosystem
+🔗 Telegram :  https://t.me/ZolaEcosystem
+🔗 Discord : https://discord.gg/MTwdDngSCM
 🔗 Medium : https://zolaecosystem.medium.com
 🔗 Reddit : https://www.reddit.com/r/ZolaCommunity
+🔗 Pinterest : https://www.pinterest.com/ZolaEcosystem
 🔗 Facebook : https://www.facebook.com/ZolaEcosystem
 🔗 Instagram : https://www.instagram.com/Zola_Ecosystem
+🔗 YouTube : https://www.youtube.com/c/ZolaEcosystem
+🔗 TikTok : https://www.tiktok.com/@zolaecosystem
+🔗 CoinMarketCap : https://coinmarketcap.com/community/profile/ZolaEcosystem
 🔗 Whitepaper : https://whitepaper.zolacoin.com
 
