--- a/Social Media & Links/ReadMe
+++ b/Social Media & Links/ReadMe
@@ -12,5 +12,6 @@
 🔗 YouTube : https://www.youtube.com/c/ZolaEcosystem/
 🔗 TikTok : https://www.tiktok.com/@zolaecosystem/
 🔗 CoinMarketCap : https://coinmarketcap.com/community/profile/ZolaEcosystem/
+🔗 Bitcointalk : https://bitcointalk.org/index.php?topic=5460017/
 🔗 Whitepaper : https://whitepaper.zolacoin.com/
 
