--- a/Zola DAO/ReadMe
+++ b/Zola DAO/ReadMe
@@ -2,6 +2,6 @@ We are excited to introduce you to our decentralized Voting System (Zola DAO), a
 to propose, discuss, and vote on initiatives that will shape the future of the ZOLA ecosystem. Whether you’re a developer, a user, 
 or simply a fan of the ZOLA ecosystem, we invite you to join us and become a part of this exciting movement. 
 
-Link - https://snapshot.org/#/zolaecosystem.eth/
+Link - https://snapshot.org/#/zolaecosystem.eth
 
-Read more - https://documents.zolaecosystem.org/ecosystem/zola-dao/
+Read more - https://documents.zolaecosystem.org/ecosystem/zola-dao
