--- a/Audits/ReadMe
+++ b/Audits/ReadMe
@@ -1,3 +1,3 @@
-ZOLA smart contract has been fully audited by Freshcoins - https://github.com/freshcoins/Smart-Contract-Audits/blob/main/Zola_0x85128F08ADEF4B50EABf262b4c9674d5ACEbe8F2.pdf
+ZOLA smart contract has been fully audited by Freshcoins Audit - https://github.com/freshcoins/Smart-Contract-Audits/blob/main/Zola_0x85128F08ADEF4B50EABf262b4c9674d5ACEbe8F2.pdf/
 
-Please find more information here - https://documents.zolaecosystem.org/security/audits
+Please find more information here - https://documents.zolaecosystem.org/security/audits/
