--- a/Social Media & Links/ReadMe
+++ b/Social Media & Links/ReadMe
@@ -1,6 +1,10 @@
 📢 Social Media and Other Links
 
-🔗 Website : https://zolacoin.com/
+🌐 Website : https://zolacoin.com/
+🔗 CoinMarketCap : https://coinmarketcap.com/community/profile/ZolaEcosystem/
+🔗 Bitcointalk : https://bitcointalk.org/index.php?topic=5460017/
+🔗 Whitepaper : https://whitepaper.zolacoin.com/
+
 🔗 Twitter : https://twitter.com/ZolaEcosystem/
 🔗 Telegram :  https://t.me/ZolaEcosystem/
 🔗 Discord : https://discord.gg/MTwdDngSCM/
@@ -11,7 +15,3 @@
 🔗 Instagram : https://www.instagram.com/Zola_Ecosystem/
 🔗 YouTube : https://www.youtube.com/c/ZolaEcosystem/
 🔗 TikTok : https://www.tiktok.com/@zolaecosystem/
-🔗 CoinMarketCap : https://coinmarketcap.com/community/profile/ZolaEcosystem/
-🔗 Bitcointalk : https://bitcointalk.org/index.php?topic=5460017/
-🔗 Whitepaper : https://whitepaper.zolacoin.com/
-
