--- a/Audits/ReadMe
+++ b/Audits/ReadMe
@@ -17,7 +17,7 @@ addressing them. The project team has taken these recommendations on board and h
 improve the security and reliability of the token's smart contract. As such, users can feel confident in the 
 token's security and reliability, which ultimately benefits the entire cryptocurrency ecosystem.
 
-ZOLA smart contract audit by Freshcoins Audit:
+The full smart contract audit of ZOLA by the Freshcoins Audit:
 https://github.com/freshcoins/Smart-Contract-Audits/blob/main/Zola_0x85128F08ADEF4B50EABf262b4c9674d5ACEbe8F2.pdf/
 
 Please find more information here:
